--- a/SpointLiteVersion/Views/facturas/Create.cshtml
+++ b/SpointLiteVersion/Views/facturas/Create.cshtml
@@ -17,10 +17,43 @@
 
 
                 <div class="row">
-                    <div class="col-md-7 modal-content contedor" style="width:88%; margin-left:4%; border:1px solid #a8a3a36e">
-                        <h5>Datos del Cliente</h5>
+                    <div class="col-md-7 modal-content contedor" style="width:92%; margin-left:4%; border:1px solid #a8a3a36e">
+                        <h5>Datos</h5>
                         <div class="form-row" style="padding-left:20px;padding-bottom:20px;padding-right:20px;">
+                            <div class="form-group col-md-2">
+                                @Html.Label("Id factura", new { @class = "control-label col-md-12", @style = "text-align:left;" })
+                                <input type="text" name="idfactura" value="" id="idfactura" readonly class="form-control" />
+
+                                @*@Html.LabelFor(model => model.cliente, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <input type="text" list="cliente1" name="cliente" id="cliente" class="form-control" autocomplete="off" />
+
+                                    <datalist id="cliente1">
+                                        @foreach (var m in ViewBag.cliente)
+                                        {
+                                            <option value="@m.Text" data-id="@m.Value" />
+                                        }
+                                    </datalist>
+                                    @*Html.DropDownList("cliente", (IEnumerable<SelectListItem>)ViewBag.clientes, "---Selecciona Un Cliente---", new { @class = "form-control" })*@
+
+                                @Html.ValidationMessageFor(model => model.cliente, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group col-md-3" style="margin-left:10px;">
+                                @Html.LabelFor(model => model.fecha, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <input type="date" name="fecha" value="@DateTime.Now.Year-@DateTime.Now.Month.ToString("00")-@DateTime.Now.Day.ToString("00")" class="form-control" id="fecha" />
+                                @Html.ValidationMessageFor(model => model.fecha, "", new { @class = "text-danger" })
+
+                            </div>
+                            @*<div class="form-group col-md-4">
+
+                                    @Html.Label("Teléfono", new { @class = "control-label col-md-12" })
+                                    <input type="text" name="name" id="telefonocliente" class="form-control" readonly value="" />
+
+                                </div>*@
+
+                        </div>
+                        <div class="form-row col-md-12" style="padding-left:20px;padding-bottom:0px;padding-right:20px;">
                             <div class="form-group col-md-4">
+
                                 @Html.LabelFor(model => model.cliente, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <input type="text" list="cliente1" name="cliente" id="cliente" class="form-control" autocomplete="off" />
 
@@ -30,29 +63,46 @@
                                         <option value="@m.Text" data-id="@m.Value" />
                                     }
                                 </datalist>
-                                @*@Html.DropDownList("cliente", (IEnumerable<SelectListItem>)ViewBag.clientes, "---Selecciona Un Cliente---", new { @class = "form-control" })*@
+                            </div>
 
-                                @Html.ValidationMessageFor(model => model.cliente, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group col-md-4">
-                                @Html.Label("Teléfono", new { @class = "control-label col-md-12" })
-                                <input type="text" name="name" id="telefonocliente" class="form-control" readonly value="" />
-                              
-                            </div>
                             <div class="form-group col-md-4">
                                 @Html.Label("Dirección", new { @class = "control-label col-md-12" })
                                 <input type="text" name="name" id="ciudadcliente" class="form-control" readonly value="" />
-                            
+
+
                             </div>
                         </div>
-                    </div>
-                </div>
+                        @*otro*@
+                        <div class="form-row col-md-12" style="padding-left:20px;padding-right:20px;">
 
-                <div class="row">
-                    <div class="col-md-7 modal-content contedor" style="width:88%; margin-left:4%; margin-top:3%;margin-bottom:20px; border:1px solid #a8a3a36e">
-                        <h5>Datos del Vendedor</h5>
+                            <div class="form-group col-md-4">
 
-                        <div class="form-row" style="padding-left:20px;padding-bottom:20px;padding-right:20px;">
+                                @Html.Label("NCF", new { @class = "control-label col-md-2" })
+                                <input type="text" list="NCFs" name="NCF" id="NCF" class="form-control" autocomplete="off" />
+
+                                <datalist id="NCFs">
+                                    @foreach (var m in ViewBag.ncf)
+                                    {
+                                        <option value="@m.Text" data-id="@m.Value" />
+                                    }
+                                </datalist>
+
+                                @*@Html.DropDownList("vendedor", (IEnumerable<SelectListItem>)ViewBag.vendedores, "---Selecciona Un vendedor---", new { @class = "form-control" })*@
+                                @Html.ValidationMessageFor(model => model.vendedor, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group col-md-4">
+                                @Html.Label("Secuencia", new { @class = "control-label col-md-12", @style = "text-align:left;" })
+                                <input type="text" name="numeracionncf" id="numeracionncf" value="" class="form-control" readonly />
+                            </div>
+                            <input type="text" name="pruebancf" id="pruebancf" value="" />
+                            <input type="text" name="idncfenviar" id="idncfenviar" value="" />
+                            <select class="description" id="descripcionncf" name="descripcionncf" hidden>
+                                <option value="value">text</option>
+                            </select>
+                        </div>
+
+                        @*vendedor datos*@
+                        <div class="form-row col-md-12" style="padding-left:20px;padding-right:20px;">
                             <div class="form-group col-md-4">
 
                                 @Html.LabelFor(model => model.vendedor, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -69,22 +119,101 @@
                                 @*@Html.DropDownList("vendedor", (IEnumerable<SelectListItem>)ViewBag.vendedores, "---Selecciona Un vendedor---", new { @class = "form-control" })*@
                                 @Html.ValidationMessageFor(model => model.vendedor, "", new { @class = "text-danger" })
                             </div>
-                            <div class="form-group col-md-4">
-                                @Html.Label("Teléfono", new { @class = "control-label col-md-12" })
-                                <input type="text" name="name" id="telefonovendedor" class="form-control" readonly value="" />
 
-
-                            </div>
                             <div class="form-group col-md-4">
                                 @Html.Label("Dirección", new { @class = "control-label col-md-12" })
                                 <input type="text" name="name" id="ciudadvendedor" class="form-control" readonly value="" />
 
-                               
+
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="row">
+                    <div class="col-md-7 modal-content contedor" style="width:92%; margin-left:4%; margin-top:3%;margin-bottom:20px; border:1px solid #a8a3a36e">
+                        @*aqui*@
+                        <div class="form-row col-md-12" style="padding-left:20px;padding-bottom:20px;padding-right:20px;">
+                            <p>Servicios</p>
+                            <div class="form-group col-md-5" style="">
+
+
+                                @Html.Label("Descripción", new { @class = "control-label col-md-2" })
+                                <input type="text" name="descripci" value="" id="descripci" class="form-control" />
+
+                            </div>
+                            <div class="form-group col-md-3" style="">
+
+
+                                @Html.Label("Precio", new { @class = "control-label col-md-2" })
+                                <input type="number" name="precio" value="" id="precio" class="form-control" />
+                                @Html.ValidationMessageFor(model => model.precio, "", new { @class = "text-danger" })
+                            </div>
+
+
+
+                            @*<div class="form-group col-md-2">
+                                    @Html.LabelFor(model => model.descuento, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.EditorFor(model => model.descuento, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingrese Un descuento general" } })
+
+                                    @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+                                </div>*@
+
+                            <select class="" id="descripcionproducto" hidden>
+                                <option value="value">text</option>
+                            </select>
+                            <select class="" id="idproducto" hidden>
+                                <option value="value">text</option>
+                            </select>
+                            <select class="" id="itbisproducto" hidden>
+                                <option value="value">text</option>
+                            </select>
+
+                            <select class="" id="precio1" hidden>
+                                <option value="value">text</option>
+                            </select>
+                            <select class="" id="creditosaprobados" hidden>
+                                <option value="value">text</option>
+                            </select>
+                            <select class="" id="idcliente" hidden>
+                                <option value="value">text</option>
+                            </select>
+                            @*<select id="idprod">
+                                    <option value="value">text</option>
+                                </select>*@
+
+                        </div>
+                        <div class="form-row col-md-12" style="padding-left:20px;padding-bottom:20px;padding-right:20px;">
+
+                            <div class="form-group col-md-5">
+                                @*@Html.EditorFor(model => model.producto);*@
+                                <label for="producto" class="control-label col-md-2">Producto</label>
+                                <input type="text" list="colors" name="producto" id="producto" class="form-control" autocomplete="off" />
+
+                                <datalist id="colors">
+                                    @foreach (var m in ViewBag.producto)
+                                    {
+                                        <option value="@m.Text" data-id="@m.Value" />
+                                    }
+                                </datalist>
+                                @*@Html.DropDownList("producto", (IEnumerable<SelectListItem>)ViewBag.producto, "---Selecciona Un producto---", new { @class = "form-control" })*@
+
+                            </div>
+                        </div>
+                        <div class="form-row col-md-12" style="padding-left:20px;padding-bottom:20px;padding-right:20px;">
+
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Agregar" class="btn btn-default" />
+                                    <input type="button" value="Agregar Servicio" class="btn btn-default" onclick="fn_agregarservicios()" />
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                @*<div class="row">
                     <div class="col-md-7 modal-content contedor" style="width:88%; margin-left:4%; border:1px solid #a8a3a36e">
                         <h5>Datos de la Venta</h5>
 
@@ -115,7 +244,6 @@
 
                             <div class="form-row">
                                 <div class="form-group col-md-3">
-                                    @*@Html.EditorFor(model => model.producto);*@
                                     <label for="producto" class="control-label col-md-2">Producto</label>
                                     <input type="text" list="colors" name="producto" id="producto" class="form-control" autocomplete="off" />
 
@@ -125,7 +253,6 @@
                                             <option value="@m.Text" data-id="@m.Value" />
                                         }
                                     </datalist>
-                                    @*@Html.DropDownList("producto", (IEnumerable<SelectListItem>)ViewBag.producto, "---Selecciona Un producto---", new { @class = "form-control" })*@
 
                                 </div>
 
@@ -165,13 +292,9 @@
                                     @Html.ValidationMessageFor(model => model.precio, "", new { @class = "text-danger" })
                                 </div>
 
-                              
-                                @*<div class="form-group col-md-2">
-            @Html.LabelFor(model => model.descuento, htmlAttributes: new { @class = "control-label col-md-2" })
-            @Html.EditorFor(model => model.descuento, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingrese Un descuento general" } })
 
-            @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
-        </div>*@
+
+
 
                                 <select class="" id="descripcionproducto" hidden>
                                     <option value="value">text</option>
@@ -192,9 +315,7 @@
                                 <select class="" id="idcliente" hidden>
                                     <option value="value">text</option>
                                 </select>
-                                @*<select id="idprod">
-            <option value="value">text</option>
-        </select>*@
+
 
                             </div>
                             <div class="form-group">
@@ -208,7 +329,7 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                    </div>*@
             </form>
         </div>
     </div>
@@ -418,6 +539,34 @@
 
 <script>
     $(document).ready(function () {
+        $("#NCF").change(function () {
+            $.post("GetNcf", { idproducto: $("#NCFs option[value='" + $('#NCF').val() + "']").attr('data-id') }, function (data) {
+                $("#descripcionncf").empty();
+
+                $("#pruebancf").empty();
+                $("#idncfenviar").empty();
+                $("#numeracionncf").empty();
+
+
+
+                $.each(data, function (create, row) {
+                    /**/
+                    document.getElementById("numeracionncf").value =  row.numerodesecuencia;
+    /**/
+
+    $("#descripcionncf").append("<option value='" + row.NombreComp + "'>" + row.NombreComp + "</option>")
+    document.getElementById("pruebancf").value = row.Descripcion;
+    document.getElementById("idncfenviar").value = row.idNCF;
+
+
+
+});
+});
+})
+});
+</script>
+<script>
+    $(document).ready(function () {
         $("#producto").change(function () {
             $.post("Getproducto", { idproducto: $("#colors option[value='" + $('#producto').val() + "']").attr('data-id') }, function (data) {
 
@@ -446,13 +595,11 @@
 
             $.post("Getcliente", { idproducto: $("#cliente1 option[value='" + $('#cliente').val() + "']").attr('data-id') }, function (data) {
                 $("#idcliente").empty();
-                $("#telefonocliente").empty();
                 $("#ciudadcliente").empty();
 
                 $("#creditosaprobados").empty();
                 $.each(data, function (create, row) {
                     $("#creditosaprobados").append("<option value='" + row.creditoaprobado + "'>" + row.creditoaprobado + "</option>")
-                    document.getElementById("telefonocliente").value = row.telefono;
                     document.getElementById("ciudadcliente").value = row.direccion;
 
                     $("#idcliente").append("<option value='" + row.idCliente + "'>" + row.idCliente + "</option>")
@@ -473,11 +620,9 @@
         $("#vendedor").change(function () {
 
             $.post("Getvendedor", { idproducto: $("#vendedor1 option[value='" + $('#vendedor').val() + "']").attr('data-id') }, function (data) {
-                $("#telefonovendedor").empty();
                 $("#ciudadvendedor").empty();
 
                 $.each(data, function (create, row) {
-                    document.getElementById("telefonovendedor").value = row.telefono;
                     document.getElementById("ciudadvendedor").value = row.direccion;
 
 
@@ -1659,11 +1804,11 @@
 
     }
 
-        //var autoNumericInstance = new AutoNumeric('#tabla td', AutoNumeric.getPredefinedOptions().numericPos.dotDecimalCharCommaSeparator);
+    //var autoNumericInstance = new AutoNumeric('#tabla td', AutoNumeric.getPredefinedOptions().numericPos.dotDecimalCharCommaSeparator);
 
 
-        //$("#tabla td").autoNumeric('init', { aSign: "$ ", decimalCharacter: ",", lZero: "deny" });
-        //$("#tabla td").numeric(",");
+    //$("#tabla td").autoNumeric('init', { aSign: "$ ", decimalCharacter: ",", lZero: "deny" });
+    //$("#tabla td").numeric(",");
 
     //$("#itbis").numeric(",");
 
